chore: Update for Checkstyle in E2E